--- a/test/NetTopologySuite.IO.SpatiaLite.Test/NetTopologySuite.IO.SpatiaLite.Test.csproj
+++ b/test/NetTopologySuite.IO.SpatiaLite.Test/NetTopologySuite.IO.SpatiaLite.Test.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.10" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
     <PackageReference Include="mod_spatialite" Version="4.3.0.1" />
   </ItemGroup>
 
@@ -18,6 +18,12 @@
 
   <ItemGroup>
     <None Update="*.gpkg" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Update="nunit" Version="4.2.2" />
+    <PackageReference Update="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
